2009-04-02  Marek Habersack  <mhabersack@novell.com>

	* data/Makefile.am: added system.web.mvc.pc{.in}

	* configure.in: added data/system.web.mvc.pc to AC_OUTPUT

	* data/system.web.mvc.pc.in: added

2009-04-02  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Add an ENABLE_LLVM autoconf define.
	
	* configure.in: Add --enable-llvm argument to enable the experimental
	LLVM back end.

2009-03-31  Jb Evain  <jbevain@novell.com>

	* scripts: Remove smcs, which is handled by moon now.
	* data: ditto.

2009-03-20  Zoltan Varga  <vargaz@gmail.com>

	* mono/os: Remove this now empty directory.
	
	* mono/Makefile.am (SUBDIRS): Remove 'os'.

2009-03-16  Atsushi Enomoto  <atsushi@ximian.com>

	* scripts/Makefile.am : mono-xmltool uses 2.0.

2009-03-12  Jonathan Pryor  <jpryor@novell.com>

	* scripts/Makefile.am: Add sqlmetal.

2009-03-10  Zoltan Varga  <vargaz@gmail.com>

	* README: Remove the comment about --with-moonlight being pre-alpha.

2009-03-10  Atsushi Enomoto  <atsushi@ximian.com>

	* scripts/Makefile.am : added svcutil.

2009-02-26  Marek Habersack  <mhabersack@novell.com>

	* data/mono.web.pc.in: added. Fixes bug #479760

	* data/Makefile.am:  added mono.pc{.in} wherever necessary

2009-02-07 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* configure.in: include stdio so that NULL is defined when checking
	for ifreq.

2009-02-06  Miguel De Icaza  <miguel@novell.com>

	* Disable parallel marking on OSX as it hangs during collections
	in the bootstrap stage of Mono.

	As we find more platforms that hang, we should disable it there as
	well. 

2009-02-03  Miguel de Icaza  <miguel@novell.com>

	* configure.in (PLATFORM_NO_SYMLINKS): New define that replaces
	PLATFORM_WIN32.

2009-02-02  Rodrigo Kumpera  <rkumpera@novell.com>

	* configure.in: Add --with-mcs-docs to make it possible to disable building of documentation under mcs.

2009-01-29  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Remove -Wcast-align from the warning list, it leads to a lot of