@@ -1,3 +1,7 @@
+2009-04-02  Zoltan Varga  <vargaz@gmail.com>
+
+	* configure.in: Disable the call to AC_PROG_CXX for now.
+
 2009-04-02  Marek Habersack  <mhabersack@novell.com>
 
 	* data/Makefile.am: added system.web.mvc.pc{.in}
